--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "example:generate": "npm run build && node dist/example-generate-code.js"
   },
   "keywords": [],
   "author": "",
