--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modus-data/mcp-codemode",
+  "name": "mcp-codemode",
   "version": "1.0.0",
   "description": "An agnostic implementation fit for sandbox environments for the MCP codemode concept",
   "main": "dist/index.js",
